# mvloc

./: LICENSE.md  README.md  pyproject.toml
docs/: create-new-weblate-project.md
glossaries/: parseGlossaries.py
glossaries/src/: ftl-multiverse-glossary-de.tbx  ftl-multiverse-glossary-es.tbx  ftl-multiverse-glossary-fr.tbx  ftl-multiverse-glossary-it.tbx  ftl-multiverse-glossary-ja.tbx  ftl-multiverse-glossary-ko.tbx  ftl-multiverse-glossary-pl.tbx  ftl-multiverse-glossary-pt_BR.tbx  ftl-multiverse-glossary-ru.tbx  ftl-multiverse-glossary-zh_Hans.tbx
mvlocscript/: cli.py  fstools.py  ftl.py  machine.py  update.py  xmltools.py
mvlocscript/aitranslation/: gemini.py
mvlocscript/aitranslation/glossaries/: en-de.txt  en-es.txt  en-fr.txt  en-it.txt  en-ja.txt  en-ko.txt  en-pl.txt  en-pt_BR.txt  en-ru.txt  en-zh_Hans.txt
