[tool.poetry]
name = "mvlocscript"
version = "0.1.0"
description = ""
authors = ["nedsociety <nedsociety@gmail.com>"]

[tool.poetry.scripts]
mvloc = "mvlocscript.cli:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
lxml = "^4.9.3"
click = "^8.1.7"
json5 = "^0.9.14"
polib = "^1.2.0"
loguru = "^0.7.0"
requests = "^2.31.0"
rapidfuzz = "^3.5.2"

[tool.poetry.dev-dependencies]
pyinstaller = "^5.13.0"
snakeviz = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
